# AutoVoyce

./: .gitignore  RAILWAY_DEPLOYMENT.md  README.md  TESTING_CURLS.md  cookies.txt  package-lock.json  package.json  pyproject.toml  settings.py
backend/: Procfile  README.md  pyproject.toml  railway.json  requirements.txt  settings.py
backend/src/agents/: agent_creator.py  pinecone_query_agent.py  pinecone_uploader_agent.py  youtube_retriever_agent.py  youtube_transcript_agent.py
backend/src/main/: main.py
backend/src/schemas/: response_schema.py
backend/src/tools/: pinecone_uploader.py  query_tool.py  transcript_fetcher.py  youtube_search.py
backend/src/utils/: base.py  event_emitter.py  pinecone_vector_index.py  session_manager.py
backend/src/workflow/: workflow.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/ingestion/: page.tsx
frontend/components/: shared-footer.tsx  shared-header.tsx  sparkle-decoration.tsx  video-card.tsx  voice-waveform.tsx
frontend/lib/: config.ts
src/agents/: agent_creator.py  pinecone_query_agent.py  pinecone_uploader_agent.py  pinecone_uploader_agnet.py  youtube_retriever_agent.py  youtube_retriever_agnet.py  youtube_transcript_agent.py
src/main/: main.py
src/schemas/: response_schema.py
src/tools/: pinecone_uploader.py  query_tool.py  youtube_search.py
src/utils/: pinecone_vector_index.py  promps.yml
src/workflow/: workflow.py
