[project]
name = "autovoyce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "serpapi>=0.1.5",
    "youtube-transcript-api>=1.2.3",
]
