[project]
name = "autovoyce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "langchain-huggingface>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "sentence-transformers>=5.1.2",
    "serpapi>=0.1.5",
    "youtube-transcript-api>=1.2.3",
    "langgraph",
    "pyyaml",
    "langchain-text-splitters>=1.0.0",
    "tiktoken>=0.12.0",
    "langchain-experimental>=0.4.0",
    "pinecone>=5.0.0",
    "langchain-groq>=1.1.0",
    "pydantic>=2.12.5",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
]
